--- a/src/components/Header/Nav/ProductNavigation/Desktop/productNavigation.module.css
+++ b/src/components/Header/Nav/ProductNavigation/Desktop/productNavigation.module.css
@@ -62,6 +62,20 @@
   transition: all 200ms ease-in-out;
 }
 
+.active::after {
+  content: "";
+  position: absolute;
+  bottom: -35px;
+  right: 35%;
+  transform: translateX(-50%) rotate(45deg);
+  width: 20px;
+  height: 20px;
+  z-index: -1;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: white;
+  padding: var(--space-2x);
+}
+
 @media screen and (min-width: 768px) {
   .root {
     display: flex;
